--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-elements": "^0.19.1",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-share": "^1.1.3",
-    "react-navigation": "^3.0.9"
+    "react-navigation": "^3.0.9",
+    "rn-fetch-blob": "^0.10.15"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
